--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
         <section class="contacts">
             <h3>Контакти</h3>
-            <p>Телефон: <a href="tel:+380501234567">+38 (050) 123-45-67</a></p>
-            <p>Email: <a href="mailto:info@example.com">info@example.com</a></p>
-            <p>Адреса: м. Харків, вул. Центральна, 12</p>
+            <p>Телефон: <a href="tel:+380636652157">+38 (063) 665-21-57</a></p>
+            <p>Email: <a href="mailto:ekaterinacerkasina475@gmail.com">ekaterinacerkasina475@gmail.com</a></p>
+            <p>Адреса: м. Харків, вул. Хабарова, 1а</p>
         </section>
     </div>
 
@@ -127,4 +127,5 @@
         });
     </script>
 </body>
+
 </html>
