--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <div class="container">
         <section class="product">
-            <!-- Замените src на свои фото товара -->
-            <img src="product1.jpg" alt="Постільна білизна з бавовни">
+            <!-- foto1.jpg -->
+            <img src="foto1.jpg" alt="Постільна білизна з бавовни">
             <div class="product-info">
                 <h2>100% натуральна бавовна</h2>
                 <p>Насолоджуйтесь комфортом та здоровим сном із нашою постільною білизною з натуральної бавовни. М’яка, приємна на дотик і гіпоалергенна.</p>
@@ -129,3 +129,4 @@
 </body>
 
 </html>
+
