--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
         <section class="product">
             <!-- foto1.jpg -->
-            <img src="foto1.jpg" alt="Постільна білизна з бавовни">
+            <img src="foto1.jpg.png" alt="Постільна білизна з бавовни">
             <div class="product-info">
                 <h2>100% натуральна бавовна</h2>
                 <p>Насолоджуйтесь комфортом та здоровим сном із нашою постільною білизною з натуральної бавовни. М’яка, приємна на дотик і гіпоалергенна.</p>
@@ -124,9 +124,11 @@
             if(this.value === 'single') price.textContent = '1200 грн';
             else if(this.value === 'double') price.textContent = '1800 грн';
             else if(this.value === 'family') price.textContent = '2500 грн';
+            else if(this.value === 'evro') price.textContent = '2150 грн';
         });
     </script>
 </body>
 
 </html>
+
 
